--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    //implementation project(':recyclerviewdraggablescrollbar')
-    implementation 'com.github.stellarlight17:recyclerviewdraggablescrollbar:0.1.0'
+    implementation project(':recyclerviewdraggablescrollbar')
+    //implementation 'com.github.stellarlight17:recyclerviewdraggablescrollbar:0.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
