--- a/recyclerviewdraggablescrollbar/build.gradle
+++ b/recyclerviewdraggablescrollbar/build.gradle
@@ -11,6 +11,8 @@ android {
     defaultConfig {
         minSdk 26
         targetSdk 33
+        versionCode 1
+        versionName "0.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -23,6 +25,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -54,4 +57,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
+
+tasks.withType(Javadoc).all {
+    enabled = false // <--- https://github.com/novoda/bintray-release/issues/71
 }
