--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 pluginManagement {
     repositories {
         google()
+        maven { url "https://jitpack.io" }
         mavenCentral()
         gradlePluginPortal()
-        maven { url "https://jitpack.io" }
         jcenter()
     }
 }
@@ -11,11 +11,10 @@ dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
-        //jcenter()
-        mavenCentral()
         maven { url "https://jitpack.io" }
+        mavenCentral()
     }
 }
 rootProject.name = "RecyclerViewDraggableScrollbar"
-include ':app'
-include ':recyclerviewdraggablescrollbar'
+//include ':app'
+include ':library'
